apply some better api choices from https://github.com/elastic/elasticsearch/pull/106359